# talenta-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: SMOKE.md
docs/superpowers/plans/: 2026-04-16-talenta-automation.md
docs/superpowers/specs/: 2026-04-16-talenta-automation-design.md
src/talenta_bot/: __main__.py  attendance.py  cli.py  config.py  errors.py  notifier.py  scheduler.py  selectors.py  session.py
tests/integration/: conftest.py  test_clock_in_happy_path.py
tests/unit/: test_config.py  test_notifier.py  test_scheduler.py  test_session.py
