[project]
name = "talenta-bot"
version = "0.1.0"
description = "Automated clock-in/out for Talenta (Mekari HR)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49,<2.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "freezegun>=1.4,<2.0",
    "aiohttp>=3.9,<4.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
talenta-bot = "talenta_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talenta_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
